# task_manager

./: .env  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  db_setup.py  docker-compose.yml  pyproject.toml
app/: README.md  db.py  main.py
app/models/: __init__.py  tasks_model.py
app/routes/: tasks_routes.py
app/schemas/: tasks_schemas.py
app/utils/: tasks_utils.py
migrations/: env.py
migrations/versions/: ec77e2216027_добавление_таблиц.py
tests/: conftest.py  test_data.py
